[package]
name = "tempmail-lol"
version = "0.1.0"
edition = "2021"
description = "API to generate temporary email addresses"
license = "MIT"
keywords = ["tempmail", "temporary-email", "temp-mail", "disposable", "disposable-email"]
categories = ["api-bindings"]
repository = "https://github.com/Morb0/tempmail-lol"

[badges]
maintenance = { status = "passively-maintained" }

[features]
async = []

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
